Got basic GET working

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 api/api_core/tmp/cache/Projects.dat
 api/api_core/tmp/cache/Roles.dat
 api/api_core/tmp/cache/Timeslips.dat
+api/api_core/tmp/cache/Tags.dat
